--- a/views/trial-balance.ejs
+++ b/views/trial-balance.ejs
@@ -45,28 +45,50 @@
 	<div class="wrapper">
 		<div class="main-header">
 			<div class="logo-header">
-				<a href="/admin/dashboard" class="logo">MaryBill Conglomerate</a>
-				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
+				<a href="/admin/dashboard" class="logo">
+					MaryBill Conglomerate
+				</a>
+				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
+					data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<button class="topbar-toggler more"><i class="la la-ellipsis-v"></i></button>
 			</div>
 			<nav class="navbar navbar-header navbar-expand-lg">
 				<div class="container-fluid">
+
 					<form class="navbar-left navbar-form nav-search mr-md-3" action="">
 						<div class="input-group">
 							<input type="text" placeholder="Search ..." class="form-control">
-							<div class="input-group-append"><span class="input-group-text"><i class="la la-search search-icon"></i></span></div>
+							<div class="input-group-append">
+								<span class="input-group-text">
+									<i class="la la-search search-icon"></i>
+								</span>
+							</div>
 						</div>
 					</form>
 					<ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
 						<li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="la la-envelope"></i></a>
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">
+								<i class="la la-envelope"></i>
+							</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"><img src="/img/profile-icon.png" alt="user-img" width="36" class="img-circle"><span>Steven</span></a>
+							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img
+									src="/img/profile-icon.png" alt="user-img" width="36" class="img-circle"><span>Steven</span></span>
+							</a>
 							<ul class="dropdown-menu dropdown-user">
-								<li><div class="user-box"><div class="u-img"><img src="/img/profile-icon.png" alt="user"></div><div class="u-text"><h4>Steven</h4><p class="text-muted">hello@themekita.com</p><a href="#" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div></div></li>
+								<li>
+									<div class="user-box">
+										<div class="u-img"><img src="/img/profile-icon.png" alt="user"></div>
+										<div class="u-text">
+											<h4>Steven</h4>
+											<p class="text-muted">hello@themekita.com</p><a href="#"
+												class="btn btn-rounded btn-danger btn-sm">View Profile</a>
+										</div>
+									</div>
+								</li>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#"><i class="ti-user"></i> My Profile</a>
 								<a class="dropdown-item" href="#"></i> My Balance</a>
@@ -74,59 +96,175 @@
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
+								<a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i> Logout</a>
 							</ul>
+							<!-- /.dropdown-user -->
 						</li>
 					</ul>
 				</div>
 			</nav>
 		</div>
-		<div class="sidebar">
-			<div class="sidebar-wrapper">
-				<div class="user">
-					<div class="photo"><img src="/img/profile-icon.png"></div>
-					<div class="info">
-						<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
-							<span>Steven<span class="user-level">Administrator</span><span class="caret"></span></span>
-						</a>
-						<div class="clearfix"></div>
-						<div class="collapse in" id="collapseExample" aria-expanded="true">
-							<ul class="nav">
-								<li><a href="#profile"><span class="link-collapse">My Profile</span></a></li>
-								<li><a href="#edit"><span class="link-collapse">Edit Profile</span></a></li>
-								<li><a href="#settings"><span class="link-collapse">Settings</span></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<ul class="nav">
-					<li class="nav-item"><a href="/admin/dashboard"><i class="fa-solid fa-gauge"></i><p>Dashboard</p></a></li>
-					<li class="nav-item"><a href="/admin/product-upload"><i class="fa-solid fa-upload"></i><p>Upload Product</p></a></li>
-					<li class="nav-item"><a href="/admin/all-products"><i class="fa-solid fa-tarp"></i><p>All Products</p></a></li>
-					<li class="nav-item"><a href="/staff/add"><i class="fa-solid fa-user-plus"></i><p>Add Staff</p></a></li>
-					<li class="nav-item"><a href="/staff/all"><i class="fa-solid fa-users"></i><p>All Staff</p></a></li>
-					<li class="nav-item"><a href="/assets/add"><i class="fa-solid fa-box-archive"></i><p>Add Asset</p></a></li>
-					<li class="nav-item"><a href="/assets/all"><i class="fa-solid fa-boxes-stacked"></i><p>All Assets</p></a></li>
-					<li class="nav-item"><a href="/ledger/add"><i class="fa-solid fa-book"></i><p>Ledger Entry</p></a></li>
-					<li class="nav-item"><a href="/ledger/view"><i class="fa-solid fa-book-open"></i><p>View Ledger</p></a></li>
-					<li class="nav-item"><a href="/ledger/accounts"><i class="fa-solid fa-sitemap"></i><p>Chart of Accounts</p></a></li>
-					<li class="nav-item active"><a href="/ledger/trial-balance"><i class="fa-solid fa-balance-scale"></i><p>Trial Balance</p></a></li>
-					<li class="nav-item">
-						<a href="/ledger/balance-sheet">
-							<i class="fa-solid fa-file-invoice-dollar"></i>
-							<p>Balance Sheet</p>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="/ledger/profit-loss">
-							<i class="fa-solid fa-money-bill-trend-up"></i>
-							<p>Profit & Loss</p>
-						</a>
-					</li>
-					<li class="nav-item"><a href="/logout"><i class="fas fa-sign-out-alt"></i><p>Log Out</p></a></li>
-				</ul>
-			</div>
-		</div>
+        <!-- Sidebar -->
+		 <div class="sidebar">
+  <div class="sidebar-wrapper">
+    <div class="user">
+      <div class="photo">
+        <img src="/img/profile-icon.png" />
+      </div>
+      <div class="info">
+        <a
+          class=""
+          data-toggle="collapse"
+          href="#collapseExample"
+          aria-expanded="true"
+        >
+          <span>
+            Steven
+            <span class="user-level">Administrator</span>
+            <span class="caret"></span>
+          </span>
+        </a>
+        <div class="clearfix"></div>
+
+        <div class="collapse in" id="collapseExample" aria-expanded="true">
+          <ul class="nav">
+            <li>
+              <a href="#profile">
+                <span class="link-collapse">My Profile</span>
+              </a>
+            </li>
+            <li>
+              <a href="#edit">
+                <span class="link-collapse">Edit Profile</span>
+              </a>
+            </li>
+            <li>
+              <a href="#settings">
+                <span class="link-collapse">Settings</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <ul class="nav">
+      <li class="nav-item">
+        <a href="/admin/dashboard">
+          <i class="fa-solid fa-gauge"></i>
+          <p>Dashboard</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/product-upload">
+          <i class="fa-solid fa-upload"></i>
+          <p>Upload Product</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/all-products">
+          <i class="fa-solid fa-tarp"></i>
+          <p>All Products</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/staff/add">
+          <i class="fa-solid fa-user-plus"></i>
+          <p>Add Staff</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/staff/all">
+          <i class="fa-solid fa-users"></i>
+          <p>All Staff</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/payroll/setup">
+          <i class="fa-solid fa-money-check-dollar"></i>
+          <p>Payroll Config</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/payroll/run">
+          <i class="fa-solid fa-play"></i>
+          <p>Run Payroll</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/payroll/history">
+          <i class="fa-solid fa-file-invoice-dollar"></i>
+          <p>Payroll History</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/attendance">
+          <i class="fa-solid fa-clock"></i>
+          <p>Attendance</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/leave/manage">
+          <i class="fa-solid fa-calendar-check"></i>
+          <p>Leave Mgmt</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/assets/add">
+          <i class="fa-solid fa-box-archive"></i>
+          <p>Add Asset</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/assets/all">
+          <i class="fa-solid fa-boxes-stacked"></i>
+          <p>All Assets</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/ledger/add">
+          <i class="fa-solid fa-book"></i>
+          <p>Ledger Entry</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/ledger/view">
+          <i class="fa-solid fa-book-open"></i>
+          <p>View Ledger</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/ledger/accounts">
+          <i class="fa-solid fa-sitemap"></i>
+          <p>Chart of Accounts</p>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a href="/ledger/trial-balance">
+          <i class="fa-solid fa-balance-scale"></i>
+          <p>Trial Balance</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/ledger/balance-sheet">
+          <i class="fa-solid fa-file-invoice-dollar"></i>
+          <p>Balance Sheet</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/ledger/profit-loss">
+          <i class="fa-solid fa-money-bill-trend-up"></i>
+          <p>Profit & Loss</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/logout">
+          <i class="fas fa-sign-out-alt"></i>
+          <p>Log Out</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
 		<div class="main-panel">
 			<div class="content">
 				<div class="container-fluid">
